--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,7 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
       - run: gradle test jacocoTestReport
+      - store_artifacts:
+          path: ~/repo/build/jacocoHtml
 
 
